Fixed image headers on mobile.

--- a/themes/botwiki/src/styles/styles.less
+++ b/themes/botwiki/src/styles/styles.less
@@ -916,8 +916,7 @@ div.article-thumbnail{
   img{
     margin-bottom: -10px; /* ??? */
     @media (max-width: @site-width-medium){
-      object-fit: cover;
-      min-height: 450px;
+      object-fit: contain;
     }
   }
 }
